hard-gists/5232301/run.log
=== Docker Run Log for 5232301 ===
Started at: Mi 29. Okt 15:29:37 CET 2025

[2025-10-29 15:29:37] START: Running container for 5232301
[2025-10-29 15:29:38] SUCCESS: Container 4faba3626b0b8c7155265e619f01fdd93fd0944a0377f9798e63284110bf4dda started for 5232301
=== Container logs for 5232301 ===
  File "/snippet.py", line 14
    print "Generating a 1024 bit private/public key pair for Alice..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5232301 ===
[2025-10-29 15:29:40] INFO: Container 4faba3626b0b8c7155265e619f01fdd93fd0944a0377f9798e63284110bf4dda has stopped
